# tungstenite_testings

./: Cargo.toml  index.html  r  r.bat
src/: example.rs  handlers.rs  main-bk.rs  main.rs  othello.rs  protocol.rs  runner.rs
src/othello/: conversions.rs  moves.rs  serialization.rs
src/protocol/: conversions.rs  structs.rs  urls.rs
src/runner/: settings.rs  structs.rs
