[package]
name = "tungstenite_testings"
version = "0.2.0"
authors = ["me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tungstenite = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
futures-util = "*"
futures-channel = "*"
uid = "0.1"
log = "0.4"
simple_logger = "1.6"
serde = {version = "1.0", features = ["derive"]}
