[package]
name = "tungstenite_testings"
version = "0.2.0"
authors = ["me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tungstenite = "*"
http = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
futures-util = "*"
futures-channel = "*"
log = "0.4"
simple_logger = "1.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.6"
uuid = {version = "0.8", features = ["v4", "serde"]}
